fixed csv file write to

--- a/notebooks/my_geopandas_notebook.ipynb
+++ b/notebooks/my_geopandas_notebook.ipynb
@@ -556,9 +556,9 @@
    "outputs": [],
    "source": [
     "skin = incidents_by_precinct[incidents_by_precinct.offense_nibrs == \"40A\"]\n",
-    "skin.to_csv('skin.csv', index=False)\n",
+    "skin.to_csv('../data/skin.csv', index=False)\n",
     "drunk = incidents_by_precinct[incidents_by_precinct.offense_nibrs == \"90E\"]\n",
-    "drunk.to_csv('drunk.csv', index=False)"
+    "drunk.to_csv('../data/drunk.csv', index=False)"
    ]
   },
   {
